Prepare production deployment for Render + Railway MySQL + Vercel